--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-html, body {
-  margin: 0;
-  padding: 0;
-}
-
-canvas {
-  display: block;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
